--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
         	<version>2.2.2</version>
     	</dependency>
 
+		<dependency>
+  			<groupId>org.seleniumhq.selenium</groupId>
+  			<artifactId>selenium-java</artifactId>
+  			<version>3.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
