--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
     		<version>3.7.0</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>commons-net</groupId>
+    		<artifactId>commons-net</artifactId>
+    		<version>3.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
